# constrained-monads

./: .gitignore  .travis.yml  README.md  constrained-monads.cabal  report.html  stack.yaml
bench/: EnumVect.hs  MuchAdo.hs  NoAdo.hs  Prob.hs  bench.hs
src/Control/Applicative/: Constrained.hs
src/Control/Monad/: Constrained.hs
src/Control/Monad/Constrained/: Ap.hs  Appl.hs  Array.hs  Cont.hs  Error.hs  Free.hs  IO.hs  IntSet.hs  Reader.hs  State.hs  Trans.hs  Writer.hs
src/Control/Monad/Constrained/Internal/: Unconstrained.hs
src/Data/: Vector.hs
test/: Spec.hs
