name:                constrained-monads
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/oisdk/constrained-monads#readme
license:             MIT
license-file:        LICENSE
author:              Donnacha Oisín Kidney
maintainer:          mail@doisinkidney.com
copyright:           2016 Donnacha Oisín Kidney
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Constrained
  build-depends:       base >= 4.9 && < 5
                     , containers >= 0.5
                     , mtl >= 2.2
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/oisdk/constrained-monads
